plugins {
	id 'org.springframework.boot' version '2.3.0.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
}

group = 'com.predictivemovement'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '14'

repositories {
	mavenCentral()
}

dependencies {
  	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	  
	compile group: 'com.graphhopper', name: 'jsprit-core', version: '1.8'
	compile group: 'com.graphhopper', name: 'jsprit-io', version: '1.8'
	compile group: 'com.graphhopper', name: 'jsprit-analysis', version: '1.8'

	compile group: 'org.json', name: 'json', version: '20200518'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'org.springframework.amqp:spring-rabbit-test'
}

test {
	useJUnitPlatform()
}
